# ASL-Recognition-App

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ASL_ACCURACY.md  INSTALLATION.md  QUICK_TIPS.md  STRETCH_GOALS.md
docs/screenshots/: README.md
examples/: demo_scenarios.md  expected_behaviors.md
src/handy_fingers/: __init__.py  __main__.py  app.py  calibration.py  fingers.py  landmarks.py  overlay.py  video.py
tests/: test_fingers.py
tests/assets/: fist_landmarks.json  open_hand_landmarks.json  thumbs_up_landmarks.json
